--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "An API for managing business cards and related services",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint .",
-    "build": "npm run lint && npm test"
+    "test": "jest",
+    "build": "npm run lint && npm test",
+    "prestart": "npm audit --fix"
   },
-  "keywords": ["business-card", "API", "nodejs", "express"],
+  "keywords": [
+    "business-card",
+    "API",
+    "nodejs",
+    "express"
+  ],
   "author": "Ganesh Rahul",
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.423.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
@@ -27,6 +34,7 @@
   },
   "devDependencies": {
     "eslint": "^8.54.0",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1"
   }
 }
